  * Improve and clarify dpkg-shlibdeps superfluous linking warning messages.
    Based on a patch by Peter Eisentraut <petere@debian.org>. Closes: #656496
  * Relax --merge-avail Packages file parser, to not fail on bogus versions.
  * When building only arch-indep binaries with «dpkg-buildpackage -A», name
    the .changes file using ‘all’ as architecture. Closes: #661638

  [ Raphaël Hertzog ]
  * Update Dpkg::Shlibs to look into multiarch paths when cross-building
    too. Closes: #595144
  * Rewrite architecture.mk with explicit loops instead of duplicating many
    similar lines. Based on a patch by Thorsten Glaser <tg@mirbsd.de>.
  * Modify dpkg-gencontrol and dpkg-distaddfile to grab a write lock
    on debian/control before updating debian/files to avoid simultaneous
    updates. Closes: #642608
    Add libfile-fcntllock-perl to dpkg-dev's Depends since we use this module
    to handle the locking.
  * Update dpkg-gensymbols(1) to clarify that -e accepts shell patterns
    expansions and not regular expressions. And let dpkg-gensymbols output a
    warning when a pattern doesn't match any file. Closes: #649248
  * Add new option "-a <arch>" to dpkg-checkbuilddeps to check build
    dependencies for another architecture. This is really basic for now since
    it assumes all build dependencies must be satisfied on the listed
    architecture. Closes: #648180 Thanks to Colin Watson for the patch.
  * Error out if a dpkg database .list file is not a regular file. LP: #369898
  * Fix dpkg-mergechangelogs to not error out on invalid versions.
    Closes: #651993
  * Fix dpkg-source --commit on "3.0 (quilt)" when an explicit patch file
    is given with a relative filename. Closes: #652414
  * Further clarify in dpkg-source(1) the conditions under which it's possible
    to pass an explicit patch file to dpkg-source --commit.
  * Add new --query-features command to dpkg-buildflags. Thanks to Kees Cook
    for the patch. Closes: #651481