@@ -60,6 +60,8 @@ dpkg (1.16.2) UNRELEASED; urgency=low
   * Relax --merge-avail Packages file parser, to not fail on bogus versions.
   * When building only arch-indep binaries with «dpkg-buildpackage -A», name
     the .changes file using ‘all’ as architecture. Closes: #661638
+  * Handle unknown architectures gracefully in dpkg-buildflags.
+    Closes: #663004
 
   [ Raphaël Hertzog ]
   * Update Dpkg::Shlibs to look into multiarch paths when cross-building
